--- a/geekshop/orders/templates/orders/order_form.html
+++ b/geekshop/orders/templates/orders/order_form.html
@@ -1,5 +1,6 @@
 {% extends "products/base.html" %}
 {% load static %}
+{% load cache %}
 
 {% block content %}
     {% include 'orders/include/inc_order_summary.html' %}
@@ -32,14 +33,20 @@
                                 {{ field.errors.as_ul }}
 
                                 {% if field.name == 'price' %}
-                                    {% if not field.value %}
-{#                                        <span class="orderitems-{{ forloop.parentloop.counter0 }}-price"></span>#}
-                                    {% else %}
+                                    {% if field.value %}
                                         <span class="orderitems-{{ forloop.parentloop.counter0 }}-price">
-                                            {{ field.value}} руб </span>
+                                            {{ field.value }} руб </span>
                                     {% endif %}
                                 {% else %}
-                                    {{ field }}
+
+                                    {% if field.name == 'product' %}
+                                        {% cache 3600 orderitemform_product field.value %}
+                                            {{ field }}
+                                        {% endcache %}
+                                    {% else %}
+                                        {{ field }}
+                                    {% endif %}
+
                                 {% endif %}
 
 
