--- a/geekshop/products/templates/include/product_items.html
+++ b/geekshop/products/templates/include/product_items.html
@@ -10,7 +10,7 @@
                     </a>
                     <div class="card-body">
                         <h4 class="card-title">
-                            <a href="#">{{ product.name }}</a>
+                            <a href="{% url 'products:detail' product.id %}">{{ product.name }}</a>
                         </h4>
                         <h5>{{ product.price }} {{ currency }}.</h5>
                         <p class="card-text">{{ product.description }}</p>
@@ -18,7 +18,8 @@
                     <div class="card-footer text-center">
                         <div class="product_add">
                             <button type="button" name="{{ product.id }}" value="{{ products.number }}"
-                                    class="btn btn-outline-success">Отправить в корзину</button>
+                                    class="btn btn-outline-success">Отправить в корзину
+                            </button>
                         </div>
                     </div>
                 </div>
