--- a/geekshop/admins/templates/admins/admin-category-read.html
+++ b/geekshop/admins/templates/admins/admin-category-read.html
@@ -17,12 +17,16 @@
                                 <tr>
                                     <th>Название</th>
                                     <th>Описание</th>
+                                    <th>Активность</th>
+                                    <th>Действие</th>
                                 </tr>
                                 </thead>
                                 <tfoot>
                                 <tr>
                                     <th>Название</th>
                                     <th>Описание</th>
+                                    <th>Активность</th>
+                                    <th>Действие</th>
                                 </tr>
                                 </tfoot>
                                 <tbody>
@@ -32,6 +36,21 @@
                                                style="color: dodgerblue">{{ category.name }}</a>
                                         </td>
                                         <td>{{ category.description }}</td>
+                                        <td>
+                                            {% if category.is_active %}
+                                                Да
+                                            {% else %}
+                                                Нет
+                                            {% endif %}
+                                        </td>
+                                        <td>
+                                            <form action="{% url 'admins:admins_category_delete' category.id %}"
+                                                  method="post">
+                                                {% csrf_token %}
+                                                <input class="btn btn-link" type="submit"
+                                                       value="Удалить">
+                                            </form>
+                                        </td>
                                     </tr>
                                 {% endfor %}
                                 </tbody>
