--- a/geekshop/orders/templates/orders/order_form.html
+++ b/geekshop/orders/templates/orders/order_form.html
@@ -5,7 +5,7 @@
 {% block content %}
     {% include 'orders/include/inc_order_summary.html' %}
     <div class="order_form">
-        <form action="" method="post">
+        <form action="" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form.as_p }}
             <table class="table">
