--- a/geekshop/products/templates/products/base.html
+++ b/geekshop/products/templates/products/base.html
@@ -103,7 +103,7 @@
 <script src="{% static 'js/baskets.js' %}"></script>
 <script src="{% static 'js/jquery_formset.js' %}"></script>
 <script src="{% static 'js/orders_scripts.js' %}"></script>
-<script src="{% static 'js/products.js' %}"></script>
+{#<script src="{% static 'js/products.js' %}"></script>#}
 
 </body>
 
